fix design problem, add some projects images

--- a/index.html
+++ b/index.html
@@ -68,14 +68,7 @@
                     <ul class="navigation-menu nav-light">
                         <li><a href="#home" class="sub-menu-item">الرئيسية</a></li>
                         <li><a href="#about" class="sub-menu-item">من نحن</a></li>
-                        <li class="has-submenu parent-menu-item">
-                            <a href="javascript:void(0)">المشاريع</a><span class="menu-arrow"></span>
-                            <ul class="submenu">
-                                <li><a href="#projects" class="sub-menu-item">تحديث سلاسل التبريد</a></li>
-                                <li><a href="#projects" class="sub-menu-item">إطلاق محاور حضرية مصغّرة</a></li>
-                                <li><a href="#projects" class="sub-menu-item">تطوير أسطول مستدام</a></li>
-                            </ul>
-                        </li>
+                        <li><a href="#projects" class="sub-menu-item">المشاريع</a></li>
                         <li><a href="#contact" class="sub-menu-item">تواصل</a></li>
                     </ul><!--end navigation menu-->
                 </div><!--end navigation-->
@@ -106,7 +99,7 @@
                 <div class="row align-items-center">
                     <div class="col-lg-5 col-md-6">
                         <div class="position-relative">
-                            <img src="assets/images/pexels-maksgelatin-4352247.jpg" class="rounded img-fluid mx-auto d-block" alt="فريق يعمل داخل مستودع">
+                            <img src="assets/images/لوقو سرمد.jpg" class="rounded img-fluid mx-auto d-block" alt="شعار سرمد">
                         </div>
                     </div><!--end col-->
 
@@ -132,7 +125,6 @@
                     <div class="col-12 text-center">
                         <div class="section-title mb-4 pb-2 text-center">
                             <h4 class="title mb-4">المشاريع</h4>
-                            <p class="text-muted para-desc mx-auto mb-0">باقة من النماذج التجريبية توضح كيفية بناء حلول مرنة، قابلة للتوسع، ومصممة لتلبية سيناريوهات تشغيل مختلفة.</p>
                         </div>
                     </div><!--end col-->
                 </div><!--end row-->
