--- a/project-ahzojah.html
+++ b/project-ahzojah.html
@@ -127,9 +127,8 @@
                     <div class="col-md-6 mt-4 pt-2 mt-sm-0 pt-sm-0">
                         <div class="section-title">
                             <h4 class="title mb-4">حول مشروع أهزوجة</h4>
-                            <p class="text-muted mb-3">أهزوجة تستلهم الأهازيج الشعرية ورقصة العرضة النجدية لتقدم أزياء معاصرة تحمل الهيبة ذاتها في الاحتفالات اليوم.</p>
-                            <p class="text-muted mb-3">تشرح المجموعة عمق مكونات العرضة قديمًا وكيف تحولت إلى جزء يُرتدى اليوم مع الحفاظ على رمزيتها للشجاعة والوحدة.</p>
-                            <p class="text-muted">النتيجة إطلالات تجمع بين الفرح والوقار وتجسد تراثًا نابضًا بالحياة.</p>
+                            <p class="text-muted mb-3">من الأهازيج الشعرية، وامتدادًا لتنوع الجذور التراثية في الأزياء، برزت رقصة العرضة النجدية كرمزٍ للشجاعة والوحدة، إذ كانت تُلهب حماس المحاربين وتشجع قلوبهم على النصر وتوحيد المملكة،ثم توارثتها الأجيال حتى غدت جزءًا أصيلًا من الاحتفالات الرسمية والاجتماعية التي تكللها الفرح والسرور.
+هذه المجموعة تشرح عُمق و أصالة مكونات العرضة النجدية قديمًا و تحولها لجزء يُرتدى اليوم يحمل الهيبة ذاتها</p>
                         </div>
                     </div>
                 </div>
