--- a/project-details.html
+++ b/project-details.html
@@ -68,14 +68,7 @@
                     <ul class="navigation-menu nav-light">
                         <li><a href="index.html#home" class="sub-menu-item">الرئيسية</a></li>
                         <li><a href="index.html#about" class="sub-menu-item">من نحن</a></li>
-                        <li class="has-submenu parent-menu-item">
-                            <a href="javascript:void(0)">المشاريع</a><span class="menu-arrow"></span>
-                            <ul class="submenu">
-                                <li><a href="index.html#projects" class="sub-menu-item">تحديث سلاسل التبريد</a></li>
-                                <li><a href="index.html#projects" class="sub-menu-item">إطلاق محاور حضرية مصغّرة</a></li>
-                                <li><a href="index.html#projects" class="sub-menu-item">تطوير أسطول مستدام</a></li>
-                            </ul>
-                        </li>
+                        <li><a href="index.html#projects" class="sub-menu-item">المشاريع</a></li>
                         <li><a href="index.html#contact" class="sub-menu-item">تواصل</a></li>
                     </ul><!--end navigation menu-->
                 </div><!--end navigation-->
