--- a/project-the-line.html
+++ b/project-the-line.html
@@ -63,57 +63,57 @@
                         <div class="tiny-six-item">
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-atbo-66986-245208.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/the-line/S7R01015.JPEG" class="img-fluid" alt="تصميم ذا لاين 1">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 1</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">تفاصيل التصميم</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-fotoaibe-1643383.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/the-line/S7R01170.JPEG" class="img-fluid" alt="تصميم ذا لاين 2">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 2</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">تفاصيل التصميم</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-fotios-photos-1090638.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/the-line/S7R01344.JPEG" class="img-fluid" alt="تصميم ذا لاين 3">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 3</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">تفاصيل التصميم</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-maksgelatin-4352247.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/the-line/S7R01015.JPEG" class="img-fluid" alt="تصميم ذا لاين 4">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 4</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">تفاصيل التصميم</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-diva-33964231.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/the-line/S7R01170.JPEG" class="img-fluid" alt="تصميم ذا لاين 5">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 5</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">تفاصيل التصميم</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-atbo-66986-245208.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/the-line/S7R01344.JPEG" class="img-fluid" alt="تصميم ذا لاين 6">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 6</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">تفاصيل التصميم</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-fotoaibe-1643383.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/the-line/S7R01015.JPEG" class="img-fluid" alt="تصميم ذا لاين 7">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 7</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">تفاصيل التصميم</a>
                                     </div>
                                 </div>
                             </div>
