fix slider problem, fix rakeza project design, add laveh logo

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
     <head>
         <meta charset="utf-8">
-        <title>سرمد - تصميم</title>
+        <title>سرمد - Sarmad</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="قالب صفحة هبوط احترافي يعتمد Bootstrap للحلول الرقمية واللوجستية.">
         <meta name="keywords" content="منصة، حلول، لوجستيات، برمجيات، أعمال، شركة">
@@ -106,11 +106,30 @@
                     <div class="col-lg-7 col-md-6 mt-4 pt-2 mt-sm-0 pt-sm-0">
                         <div class="section-title ms-lg-4 text-md-end text-center">
                             <h6 class="text-muted text-uppercase">عن سرمد</h6>
-                            <h4 class="title mb-4">مشاريع تصميم مميزة</h4>
+                            <h4 class="title mb-4">مجموعة خطوط مصممي الازياء 2025 - 2026</h4>
+                            <h3 class="title mb3">مجموعة سرمد</h3>
                             <p class="text-muted">سرمد منصة تعنى بتوثيق وعرض مشاريع تخرج طالبات تصميم الأزياء والنسيج، لتكون مساحة تُخلّد الإبداع وتُبرز الحرفية والهوية الفنية لكل مصممة.
 يستمد الموقع اسمه من معنى الديمومة والخلود، تجسيدًا لفكرة أن الإبداع الحقيقي لا يزول، بل يبقى أثره ممتدًا عبر الزمن.
 في سرمد، نحتفي بثمار الرحلة الأكاديمية، ونمنح كل مشروع مساحة تليق بقيمته الفنية، ليبقى شاهدًا على رؤية المصممة وإبداعها</p>
                             <a href="#projects" class="btn btn-primary mt-3">استكشاف المشاريع <i class="uil uil-angle-left-b"></i></a>
+                        </div>
+                    </div><!--end col-->
+                </div><!--end row-->
+
+                <div class="row align-items-center mt-5 pt-4">
+                    <div class="col-lg-7 col-md-6 order-2 order-md-1 mt-4 pt-2 mt-sm-0 pt-sm-0">
+                        <div class="section-title me-lg-4 text-md-start text-center">
+                            <h6 class="text-muted text-uppercase">About Sarmd</h6>
+                            <h4 class="title mb-4">Fashion Designers Lines 2025 – 2026</h4>
+                            <h3 class="sub-title">Sarmad Cohort</h3>
+                            <p class="text-muted">Sarmad archives and exhibits the graduation collections of fashion and textile design students, giving each designer a space where her craft, identity, and story stay alive. The name echoes permanence—proof that authentic creativity never fades but continues to inspire across generations. We honor every academic journey, showcasing each project with the care it deserves so it remains a living testament to the designer’s vision.</p>
+                            <a href="#projects" class="btn btn-primary mt-3">Explore Projects <i class="uil uil-angle-left-b"></i></a>
+                        </div>
+                    </div><!--end col-->
+
+                    <div class="col-lg-5 col-md-6 order-1 order-md-2 mt-4 mt-md-0">
+                        <div class="position-relative">
+                            <img src="assets/images/لوقو سرمد.jpg" class="rounded img-fluid mx-auto d-block" alt="Sarmd logo">
                         </div>
                     </div><!--end col-->
                 </div><!--end row-->
@@ -400,7 +419,7 @@
                                 <a href="project-rakeza.html" class="project-card-link">
                                     <div class="card blog blog-primary project-card rounded border-0 shadow-sm">
                                         <div class="position-relative">
-                                            <img src="assets/images/pexels-atbo-66986-245208.jpg" class="card-img-top rounded-top project-card-logo" alt="شعار مشروع RAKEZA">
+                                            <img src="assets/images/p20.jpg" class="card-img-top rounded-top project-card-logo" alt="شعار مشروع RAKEZA">
                                             <div class="overlay rounded-top"></div>
                                         </div>
                                         <div class="card-body content">
@@ -550,11 +569,13 @@
                                 </a>
                             </div>
 
+                            
+
                             <div class="tiny-slide">
                                 <a href="project-laveh.html" class="project-card-link">
                                     <div class="card blog blog-primary project-card rounded border-0 shadow-sm">
                                         <div class="position-relative">
-                                            <img src="assets/images/pexels-fotios-photos-1090638.jpg" class="card-img-top rounded-top project-card-logo" alt="صورة مشروع Lav&egrave;h">
+                                            <img src="assets/images/p13.jpg" class="card-img-top rounded-top project-card-logo" alt="شعار مشروع Lav&egrave;h">
                                             <div class="overlay rounded-top"></div>
                                         </div>
                                         <div class="card-body content">
@@ -648,7 +669,7 @@
                                         <div class="card-body content">
                                             <h5 class="card-title title text-dark mb-0">Aurelle</h5>
                                             <div class="d-flex justify-content-between align-items-center mt-3">
-                                                <span class="text-muted small"><i class="uil uil-user me-1"></i>ذكرى التركي</span>
+                                                <span class="text-muted small"><i class="uil uil-user me-1"></i>ذكرى تركي</span>
                                                 <span class="text-muted readmore">الق نظرة <i class="uil uil-angle-left-b align-middle"></i></span>
                                             </div>
                                         </div>
@@ -780,7 +801,7 @@
                                         <div class="card-body content">
                                             <h5 class="card-title title text-dark mb-0">رواية الراية</h5>
                                             <div class="d-flex justify-content-between align-items-center mt-3">
-                                                <span class="text-muted small"><i class="uil uil-user me-1"></i>سارة ظافر / رهام الرويلي</span>
+                                                <span class="text-muted small"><i class="uil uil-user me-1"></i>سارة العتيق / رهام الرويلي</span>
                                                 <span class="text-muted readmore">الق نظرة <i class="uil uil-angle-left-b align-middle"></i></span>
                                             </div>
                                         </div>
@@ -846,7 +867,7 @@
                                         <div class="card-body content">
                                             <h5 class="card-title title text-dark mb-0">سِجفه</h5>
                                             <div class="d-flex justify-content-between align-items-center mt-3">
-                                                <span class="text-muted small"><i class="uil uil-user me-1"></i>سارة ظافر</span>
+                                                <span class="text-muted small"><i class="uil uil-user me-1"></i>سارة العتيق</span>
                                                 <span class="text-muted readmore">الق نظرة <i class="uil uil-angle-left-b align-middle"></i></span>
                                             </div>
                                         </div>
