--- a/project-the-floral-gate.html
+++ b/project-the-floral-gate.html
@@ -126,11 +126,12 @@
 
                     <div class="col-md-6 mt-4 pt-2 mt-sm-0 pt-sm-0">
                         <div class="section-title">
-                            <h4 class="title mb-4">حول مشروع The Floral Gate</h4>
-                            <p class="text-muted mb-3">المجموعة تستلهم لحظة فتح البوابة على حديقة غنّاء لتقدم فساتين تتفتح مثل أزهار الفاوانيا في ربيع حالم.</p>
-                            <p class="text-muted mb-3">تستحضر التصاميم شجرات التسلق ودعاماتها لتخلق توازنًا بين النعومة والبنية باستخدام أقمشة التفتة والغزار والتول والأورغنزا.</p>
-                            <p class="text-muted">كل إطلالة تزدهر بنعومة فاخرة وتعكس هدوء الرفاهية الهادئة.</p>
-                        </div>
+                            <h4 class="title mb-4">About The Floral Gate</h4>
+                            <p class="text-muted mb-3">Inspired by the moment a garden’s gates open to reveal its blooms, The Floral Gate captures the elegance and grace of flowers in full blossom. The collection draws from the peony flower, symbolizing quiet luxury and refined beauty, reflected in gowns that balance softness and structure.
+
+Designs echo garden trellises, mirroring how peonies grow with support and strength. Through delicate cuts, embellishments, and fabrics like taffeta, gazar, tulle, and organza, each gown blossoms like a radiant flower in a dreamy spring garden.
+</p>
+                            
                     </div>
                 </div>
             </div>
@@ -149,7 +150,7 @@
                                 </div>
                                 <div class="flex-1 content text-start">
                                     <h6 class="title fw-bold mb-0">أسماء المصممتين</h6>
-                                    <span class="text-primary">rara · Haus of Joud</span>
+                                    <span class="text-primary">Rand Nasser · Joud Al-harbi</span>
                                 </div>
                             </div>
                             <div class="d-flex contact-detail align-items-center mt-3 justify-content-center">
