--- a/project-aurelle.html
+++ b/project-aurelle.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Aurelle تعيد تعريف الأزياء الصحراوية بلمعة الذهب على رمال الصحراء، حيث يلتقي الفن بالهوية.">
         <meta name="keywords" content="Aurelle، أزياء صحراوية، تصميم سعودي، ذهب الصحراء">
-        <meta name="author" content="ذكرى التركي">
+        <meta name="author" content="ذكرى تركي">
 
         <link rel="shortcut icon" href="assets/images/favicon.ico">
         <link href="assets/libs/tiny-slider/tiny-slider.css" rel="stylesheet">
@@ -149,7 +149,7 @@
                                 </div>
                                 <div class="flex-1 content text-start">
                                     <h6 class="title fw-bold mb-0">اسم المصممة</h6>
-                                    <span class="text-primary">ذكرى التركي</span>
+                                    <span class="text-primary">ذكرى تركي</span>
                                 </div>
                             </div>
                             <div class="d-flex contact-detail align-items-center mt-3 justify-content-center">
